syntax = "proto3";

package social_networks_service.v1;

service SocialNetworksService {
 rpc followAUser (followOrUnfollowAUserRequest) returns (EMPTY) {};
 rpc unfollowAUser (followOrUnfollowAUserRequest) returns (EMPTY) {};
 rpc isFollowing (followOrUnfollowAUserRequest) returns (IsFollowingResponse) {};
}

message IsFollowingResponse {
  bool isFollowing = 0;
}

message RelationshipEntity {
  string followerId = 0;
  string followeeId = 1;
}

message EMPTY {}

message followOrUnfollowAUserRequest {
   string followerId = 0;
   string followeeId = 1;
   string followerUsername = 2;
}